# improving-ai-agent-openspec

./: .env.example  .gitignore  README.md  phases.md  prd.md  pyproject.toml
agent/: __init__.py  cli.py  extract.py  failure_memory.py  memory_inspector.py  memory_retrieval.py  prompting.py  reflection.py  report.py  sandbox.py  solve_loop.py  success_memory.py
agent/llm/: __init__.py  client.py  moonshot.py
openspec/changes/archive/2026-05-08-phase-1-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-phase-2-solve-loop-sandbox/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-phase-3-structured-failure-reflection/: design.md  proposal.md  tasks.md
openspec/changes/phase-4-cross-run-memory/: design.md  proposal.md
openspec/specs/circuit-breaker/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/failure-memory/: spec.md
openspec/specs/llm-client/: spec.md
openspec/specs/memory-inspector/: spec.md
openspec/specs/memory-retrieval/: spec.md
openspec/specs/run-report/: spec.md
openspec/specs/sandbox/: spec.md
openspec/specs/solve-loop/: spec.md
openspec/specs/success-memory/: spec.md
tests/: conftest.py  fakes.py  test_cli.py  test_extract.py  test_failure_memory.py  test_integration.py  test_llm_client.py  test_memory_inspector.py  test_memory_retrieval.py  test_moonshot.py  test_phase4_acceptance.py  test_phase4_integration.py  test_reflection.py  test_report.py  test_sandbox.py  test_solve_loop.py  test_success_memory.py
(+21 files in other folders)
